tools/crates/vendor/toml_edit/tests/fixtures/invalid/table/redefine-3.stderr
TOML parse error at line 3, column 1
  |
3 | [t1.t2.t3]
  | ^
invalid table header
duplicate key `t3` in table `t1.t2`
